# NeuralNetCpp

./: Activations.cpp  Activations.h  CMakeLists.txt  ErrorFunctions.cpp  ErrorFunctions.h  MNIST.cpp  MNIST.h  NeuralLayer.cpp  NeuralLayer.h  NeuralLink.cpp  NeuralLink.h  NeuralNetwork.cpp  NeuralNetwork.h  Neuron.cpp  Neuron.h  README.md  Regularizations.cpp  Regularizations.h  main.cpp  mathFunction.cpp  mathFunction.h  nauralNet.sln  nauralNet.vcxproj  nauralNet.vcxproj.filters
